# termeval_ab

./: .gitignore  README.md  pyproject.toml  rep.sh  sample.env  scenario.toml
docs/: enumerated-juggling-mango.md  vibe_docs.md
green-agent/: Dockerfile  pyproject.toml
green-agent/src/: __init__.py  agent.py  executor.py  messenger.py  metrics.py  sandbox_manager.py  server.py  task_loader.py  test_runner.py
purple-agent/: Dockerfile  pyproject.toml
purple-agent/src/: __init__.py  agent.py  executor.py  llm_client.py  messenger.py  planner.py  server.py
shared/: __init__.py  protocol.py
