[project]
name = "green-agent"
version = "0.1.0"
description = "TerminalBench Evaluator Agent for AgentBeats"
requires-python = ">=3.10"
dependencies = [
    "a2a",
    "uvicorn",
    "docker",
    "harbor",
    "pydantic>=2.0",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
