[project]
name = "purple-agent"
version = "0.1.0"
description = "Terminal Agent for AgentBeats TerminalBench evaluation"
requires-python = ">=3.10"
dependencies = [
    "a2a",
    "uvicorn",
    "litellm",
    "pydantic>=2.0",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
